--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,25 +3,26 @@ name: Deploy
 
 on: [push, workflow_dispatch]
 
-
+    
 
 jobs:
-  build:
-
+  run-python-script:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-
+    
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-python@v1
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5 
         with:
           python-version: ${{matrix.python-version}}
-          architecture: 'x64'
-      - name: Install requirements
-        run: pip install -r requirements.txt
-      - name: Run tests
-        run: coverage run tests/test_admin.py
-
+      
+      - name: Run Python script
+        run: tests/__init__.py
+      - name: Run Python script
+        run: tests/test_basic.py
   
