--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,7 @@ on: [push, workflow_dispatch]
 jobs:
   run-python-script:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+
     
     steps:
       - name: Checkout code
@@ -19,10 +17,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5 
         with:
-          python-version: ${{matrix.python-version}}
+          python-version: '3.10'
       
       - name: Run Python script
-        run: tests/__init__.py
-      - name: Run Python script
-        run: tests/test_basic.py
+        run: wsgi.py
+      # - name: Run Python script
+       # run: tests/test_basic.py
   
