--- a/samples-forkflow/main.yml
+++ b/samples-forkflow/main.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12' 
-      - run: python my_script.py
+      - run: python -m pip install python-dotenv
       
       - name: Run Python script2
         run: python tests/test_basic.py
