--- a/.github/workflow/test_new.yml
+++ b/.github/workflow/test_new.yml
@@ -1,9 +1,4 @@
-on:
-    push:
-        tags:
-            - '!refs/tags/*'
-        branches:
-            - '*'
+on: [push, workflow_dispatch]
 jobs:
     run_tests:
         runs-on: [ubuntu-latest]
