--- a/.github/workflow/test_new.yml
+++ b/.github/workflow/test_new.yml
@@ -1,34 +1,57 @@
-on: [push, workflow_dispatch]
+name: test
+
+on: pull_request
+
 jobs:
-    run_tests:
-        runs-on: [ubuntu-latest]
-        steps:
-            - uses: actions/checkout@master
-            - uses: actions/setup-python@v1
-              with:
-                  python-version: '3.12'
-                  architecture: 'x64'
-            - name: Установить Poetry
-              uses: snok/install-poetry@v1
-              with:
-                  virtualenvs-create: true
-                  virtualenvs-in-project: true
-                  virtualenvs-path: .venv
-                  installer-parallel: true
-            - name: Загрузить кэш venv
-              id: cached-poetry-dependencies 
-              uses: actions/cache@v4
-              with:
-                  path: .venv
-                  key: venv-${{ runner.os }}-python-3.12  # Используем фиксированное значение версии Python
-            - name: Установить зависимости
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true' 
-              run: cd webapp && poetry install --no-interaction --no-root
-            - name: Установить проект
-              run: cd webapp && poetry install --no-interaction 
-            - name: Запустить тесты
-              run: |
-                  cd webapp && source venv/bin/activate
-                  poetry run coverage run webapp/tests.py
-                  poetry run coverage report
-                  
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      #----------------------------------------------
+      #       check-out repo and set-up python
+      #----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up python
+        id: setup-python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      #----------------------------------------------
+      #  -----  install & configure poetry  -----
+      #----------------------------------------------
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          virtualenvs-path: .venv
+          installer-parallel: true
+
+      #----------------------------------------------
+      #       load cached venv if cache exists
+      #----------------------------------------------
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      #----------------------------------------------
+      # install dependencies if cache does not exist
+      #----------------------------------------------
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+      #----------------------------------------------
+      # install your root project, if required
+      #----------------------------------------------
+      - name: Install project
+        run: poetry install --no-interaction
+      #----------------------------------------------
+      #              run test suite
+      #----------------------------------------------
+      - name: Run tests
+        run: |
+          source .venv/bin/activate
+          pytest tests/
+          coverage report
