--- a/.github/workflow/test_new.yml
+++ b/.github/workflow/test_new.yml
@@ -7,17 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
-      #       check-out repo and set-up python
+      #       Check out repository and set up Python
       #----------------------------------------------
       - name: Check out repository
-        uses: actions/checkout@v4
-      - name: Set up python
+        uses: actions/checkout@v2  # Используем стабильную версию
+      - name: Set up Python
         id: setup-python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2  # Используем стабильную версию
         with:
           python-version: '3.12'
       #----------------------------------------------
-      #  -----  install & configure poetry  -----
+      #  -----  Install & configure Poetry  -----
       #----------------------------------------------
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -28,27 +28,29 @@ jobs:
           installer-parallel: true
 
       #----------------------------------------------
-      #       load cached venv if cache exists
+      #       Load cached venv if cache exists
       #----------------------------------------------
       - name: Load cached venv
         id: cached-poetry-dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v2  # Используем стабильную версию
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}  # Убираем зависимость от python-version
       #----------------------------------------------
-      # install dependencies if cache does not exist
+      # Install dependencies if cache does not exist
       #----------------------------------------------
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
+        run: |
+          poetry install --no-interaction --no-root
       #----------------------------------------------
-      # install your root project, if required
+      # Install your root project, if required
       #----------------------------------------------
       - name: Install project
-        run: poetry install --no-interaction
+        run: |
+          poetry install --no-interaction
       #----------------------------------------------
-      #              run test suite
+      #              Run test suite
       #----------------------------------------------
       - name: Run tests
         run: |
