--- a/.github/workflow/test_new.yml
+++ b/.github/workflow/test_new.yml
@@ -3,57 +3,88 @@ name: test
 on: pull_request
 
 jobs:
-  test:
+  linting:
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
-      #       Check out repository and set up Python
+      #       check-out repo and set-up python
+      #----------------------------------------------
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      #----------------------------------------------
+      #        load pip cache if cache exists
+      #----------------------------------------------
+      - uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip
+          restore-keys: ${{ runner.os }}-pip
+      #----------------------------------------------
+      #          install and run linters
+      #----------------------------------------------
+      - run: python -m pip install black flake8 isort
+      - run: |
+          flake8 .
+          black . --check
+          isort .
+  test:
+    needs: linting
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ "ubuntu-latest", "macos-latest" ]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
+        django-version: [ "4", "5" ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      #----------------------------------------------
+      #       check-out repo and set-up python
       #----------------------------------------------
       - name: Check out repository
-        uses: actions/checkout@v2  # Используем стабильную версию
-      - name: Set up Python
+        uses: actions/checkout@v4
+      - name: Set up python ${{ matrix.python-version }}
         id: setup-python
-        uses: actions/setup-python@v2  # Используем стабильную версию
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: ${{ matrix.python-version }}
       #----------------------------------------------
-      #  -----  Install & configure Poetry  -----
+      #  -----  install & configure poetry  -----
       #----------------------------------------------
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
-          virtualenvs-path: .venv
-          installer-parallel: true
-
       #----------------------------------------------
-      #       Load cached venv if cache exists
+      #       load cached venv if cache exists
       #----------------------------------------------
       - name: Load cached venv
         id: cached-poetry-dependencies
-        uses: actions/cache@v2  # Используем стабильную версию
+        uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}  # Убираем зависимость от python-version
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
       #----------------------------------------------
-      # Install dependencies if cache does not exist
+      # install dependencies if cache does not exist
       #----------------------------------------------
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+      #----------------------------------------------
+      # install your root project, if required
+      #----------------------------------------------
+      - name: Install library
+        run: poetry install --no-interaction
+      #----------------------------------------------
+      #    add matrix specifics and run test suite
+      #----------------------------------------------
+      - name: Install django ${{ matrix.django-version }}
         run: |
-          poetry install --no-interaction --no-root
-      #----------------------------------------------
-      # Install your root project, if required
-      #----------------------------------------------
-      - name: Install project
-        run: |
-          poetry install --no-interaction
-      #----------------------------------------------
-      #              Run test suite
-      #----------------------------------------------
+          source .venv/bin/activate
+          pip install "Django==${{ matrix.django-version }}"
       - name: Run tests
         run: |
           source .venv/bin/activate
           pytest tests/
           coverage report
+          
